--- a/02Python_Analysis/PyBank/main.ipynb
+++ b/02Python_Analysis/PyBank/main.ipynb
@@ -24,43 +24,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing main class Path from pathlib library:\n",
-    "#from pathlib import Path\n",
-    "import csv\n",
+    "#importing main class Path from pathlib library:\n",
+    "# from pathlib import Path\n",
+    "# import pandas as pd\n",
+    "#Set file path\n",
+    "# Pyank_data = Path(\"budget_data.csv\")\n",
+    "#Read the CSV into a DataFrame and set the 'date' column as a datetime index\n",
+    "# PyBank_df = pd.read_csv(Pybank_data, index_col=\"Date\", infer_datetime_format=True, parse_dates=True)\n",
+    "# Pybank_df.sort_index(inplace=True)\n",
+    "#Display a few records\n",
+    "# Pybank_df.head()\n",
     "\n",
+    "#importing libararies to work with\n",
+    "import csv\n",
+    "#Assiging input and output paths to a variable to call on \n",
     "input_data = 'budget_data.csv'\n",
-    "output_data = \"budget-analysis-text.txt\""
+    "output_data = \"budget-analysis-text.txt\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#crafting metrics\n",
+    "# assinging the variable a starting value\n",
+    "# creating and assigning names to lists to hold variables in \n",
     "total_months=0\n",
     "prev_revenue=0\n",
     "month_of_change=[]\n",
     "revenue_change_list=[]\n",
     "greatest_increase = [\"\", 0]\n",
     "greatest_decrease = [\"\", 9999999999999999999]\n",
-    "total_revenue = 0"
+    "total_revenue = 0\n",
+    "# Avereage Change = (greatest_increase - greatest_decreast) / total_months [rounded to 2 decimal places]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\nFinancial Analysis\n----------------------------\nTotal Months: 86\nTotal Revenue: $38382578\nAverage Revenue Change: $7803.476744186047\nGreatest Increase in Revenue: Feb-2012 ($1926159)\nGreatest Decrease in Revenue: Sep-2013 ($-2196167)\n\n"
+      "671099\n86\n\nFinancial Analysis\n----------------------------\nTotal Months: 86\nTotal Revenue: $38382578\nAverage Revenue Change: $7803.476744186047\nGreatest Increase in Revenue: Feb-2012 ($1926159)\nGreatest Decrease in Revenue:Sep-2013 ($-2196167)\n\n"
      ]
     }
    ],
@@ -72,7 +86,9 @@
     "\n",
     "#track the totals\n",
     "        total_months=total_months+1\n",
-    "        total_revenue = total_revenue + int(row[\"Profit/Losses\"])                  # track the revenue change\n",
+    "      \n",
+    "        total_revenue = total_revenue + int(row[\"Profit/Losses\"])  \n",
+    "# track the revenue change\n",
     "        revenue_change = int(row[\"Profit/Losses\"]) - prev_revenue\n",
     "        prev_revenue = int(row[\"Profit/Losses\"])\n",
     "        revenue_change_list = revenue_change_list + [revenue_change]\n",
@@ -89,16 +105,16 @@
     "\n",
     "# Calculate the Average Revenue Change\n",
     "revenue_avg = sum(revenue_change_list) / len(revenue_change_list)\n",
-    "\n",
+    "print(sum(revenue_change_list))\n",
+    "print (len(revenue_change_list))\n",
     "# Generate Output Summary\n",
-    "output = (\n",
-    "    f\"\\nFinancial Analysis\\n\"\n",
-    "    f\"----------------------------\\n\"\n",
-    "    f\"Total Months: {total_months}\\n\"\n",
-    "    f\"Total Revenue: ${total_revenue}\\n\"\n",
-    "    f\"Average Revenue Change: ${revenue_avg}\\n\"\n",
-    "    f\"Greatest Increase in Revenue: {greatest_increase[0]} (${greatest_increase[1]})\\n\"\n",
-    "    f\"Greatest Decrease in Revenue: {greatest_decrease[0]} (${greatest_decrease[1]})\\n\")\n",
+    "output = (f\"\\nFinancial Analysis\\n\"\n",
+    "f\"----------------------------\\n\"\n",
+    "f\"Total Months: {total_months}\\n\"\n",
+    "f\"Total Revenue: ${total_revenue}\\n\"\n",
+    "f\"Average Revenue Change: ${revenue_avg}\\n\"\n",
+    "f\"Greatest Increase in Revenue: {greatest_increase[0]} (${greatest_increase[1]})\\n\"\n",
+    "f\"Greatest Decrease in Revenue: {greatest_decrease[0]} (${greatest_decrease[1]})\\n\")\n",
     "\n",
     "print(output)\n",
     "\n",
@@ -107,22 +123,39 @@
    ]
   },
   {
+   "source": [
+    "#**The total number of months included in the dataset.**Total_months is first variable\n",
+    "#**The net total amount of Profit/Losses over the entire period.**\n",
+    "#**The average of the changes in Profit/Losses over the entire period.**\n",
+    "#**The greatest increase in profits (date and amount) over the entire period.**\n",
+    "#**The greatest decrease in losses (date and amount) over the entire period.**\n",
+    "#Your resulting analysis should look similar to the following:\n",
+    "print(\"Financial Analysis\")\n",
+    "print(\"----------------------------\")\n",
+    "print(\"Total Months: 86\")\n",
+    "print(\"Total: $38382578\")\n",
+    "print(\"Average Change: $-2315.12\")\n",
+    "print(\"Greatest Increase in Profits: Feb-2012 ($1926159)\")\n",
+    "print(\"Greatest Decrease in Profits: Sep-2013 ($-2196167)\")"
+   ],
    "cell_type": "code",
-   "execution_count": 37,
    "metadata": {},
+   "execution_count": 67,
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'csvpath' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-7fcfb78a0117>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# open file in read mode and storing contents as variable \"X\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mcsvreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mcsv_header\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvreader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsv_header\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'csvpath' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Financial Analysis\n----------------------------\nTotal Months: 86\nTotal: $38382578\nAverage Change: $-2315.12\nGreatest Increase in Profits: Feb-2012 ($1926159)\nGreatest Decrease in Profits: Sep-2013 ($-2196167)\n"
      ]
     }
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# open file in read mode and storing contents as variable \"X\"\n",
     "with open(csvpath, 'r') as csvfile:\n",
