first test branch

--- a/02Python_Analysis/PyBank/BranchoffMain.ipynb
+++ b/02Python_Analysis/PyBank/BranchoffMain.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,54 +38,139 @@
     "# Pybank_df.sort_index(inplace=True)\n",
     "#Display a few records\n",
     "# Pybank_df.head()\n",
-    "\n",
-    "#importing libararies to work with\n",
-    "import csv\n",
     "#Assiging input and output paths to a variable to call on \n",
-    "input_data = 'budget_data.csv'\n",
-    "output_data = \"budget-analysis-text.txt\"\n"
+    "#input_data = 'budget_data.csv'\n",
+    "#output_data = \"budget-analysis-text.txt\"\n",
+    "#importing libararies to work with"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#crafting metrics\n",
-    "# assinging the variable a starting value\n",
-    "# creating and assigning names to lists to hold variables in \n",
-    "total_months=0\n",
-    "prev_revenue=0\n",
-    "month_of_change=[]\n",
-    "revenue_change_list=[]\n",
-    "greatest_increase = [\"\", 0]\n",
-    "greatest_decrease = [\"\", 9999999999999999999]\n",
-    "total_revenue = 0\n",
-    "# Avereage Change = (greatest_increase - greatest_decreast) / total_months [rounded to 2 decimal places]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "671099\n86\n\nFinancial Analysis\n----------------------------\nTotal Months: 86\nTotal Revenue: $38382578\nAverage Revenue Change: $7803.476744186047\nGreatest Increase in Revenue: Feb-2012 ($1926159)\nGreatest Decrease in Revenue: Sep-2013 ($-2196167)\n\n"
+      "Financial Analysis\n-------------------------------------\nTotal number of invested months: 86 months\nTotal number of invested years: 7.17 years\nTotal number of profitable months: 74 months\nTotal number of losing months: 12 months\nTotal sum of loses: $ -7327426\nTotal sum of profits: $ 45710004\nTotal revenue: $ 38382578\nMonthly Avg: $ 446309.05\nWeekly Avg: $ 111577.26\nDaily Avg: $ 14876.97\n"
      ]
     }
    ],
    "source": [
-    "with open(input_data) as revenue_data:\n",
-    "    reader = csv.DictReader(revenue_data)\n",
     "\n",
+    "import csv\n",
+    "csvpath = 'budget_data.csv'\n",
+    "with open(csvpath, 'r') as revenue_data:\n",
+    "    csvreader = csv.reader(revenue_data, delimiter = \",\")\n",
+    "    csv_header = next(csvreader)\n",
+    "    \n",
+    "   \n",
+    "    months = []\n",
+    "    profit = []\n",
+    "    profittotals = 0\n",
+    "    losstotals = 0 \n",
+    "    loss = []\n",
+    "    Profits_Loses = []\n",
+    "    Rtd = 0\n",
+    "    mv=[]\n",
+    "\n",
+    "    for row in csv.reader(revenue_data):\n",
+    "        months.append(row[0])\n",
+    "        Profits_Loses.append(row[1])\n",
+    "        Number_of_months=len(months)           \n",
+    "    \n",
+    "\n",
+    "\n",
+    "    #print(Number_of_months)\n",
+    "    #print(Profits_Loses)\n",
+    "    \n",
+    "    for values in Profits_Loses:        \n",
+    "        if int(values) > 0:\n",
+    "            profit.append(values)\n",
+    "            profittotals= profittotals + int(values)\n",
+    "        elif int(values) < 0:\n",
+    "            loss.append(values)\n",
+    "            losstotals=losstotals+int(float(values))\n",
+    "            \n",
+    "    #print(Rtd)    \n",
+    "    revenue=(profittotals + losstotals)\n",
+    "    #print(revenue)\n",
+    "    avg = revenue/Number_of_months \n",
+    "    #min(loss)= loss_amount    round(avg),.2\n",
+    "    print(f'Financial Analysis')\n",
+    "    print(f\"-------------------------------------\")    \n",
+    "    print(f'Total number of invested months:',(Number_of_months),'months')\n",
+    "    print(f'Total number of invested years:',(round(Number_of_months/12,2)),\"years\")\n",
+    "    print(f'Total number of profitable months:',len(profit),'months')\n",
+    "    print(f'Total number of losing months:', len(loss),\"months\")\n",
+    "    print(f'Total sum of loses: $', (losstotals))\n",
+    "    print(f'Total sum of profits: $', (profittotals))\n",
+    "    print(f'Total revenue: $',(revenue))\n",
+    "    print(f'Monthly Avg: $', round(avg,2))\n",
+    "    print(f'Weekly Avg: $', round(avg/4,2))\n",
+    "    print(f'Daily Avg: $', round(avg/30,2))\n",
+    "\n",
+    "#i remeber you showing someone that -1 numbers were first plus i found a few lines online that make sense and i will use more so\n",
+    "\n"
+   ]
+  },
+  {
+   "source": [
+    "    list=(profit)\n",
+    "    biggest_gain = \"\"\n",
+    "    for gain in list:\n",
+    "        if int(gain) > int(biggest_gain):\n",
+    "            biggest_gain = gain  \n",
+    "    print(biggest_gain)\n",
+    "    for totals in Profits_Loses:\n",
+    "        [Profits_Loses].index(biggest_gain)\n",
+    "          list=(Profits_Loses)\n",
+    "    biggest_gain = 0\n",
+    "    for gain in list:\n",
+    "        if int(float(gain)) > int(biggest_gain):\n",
+    "            biggest_gain = int(float(gain))  \n",
+    "    print(biggest_gain)\n",
+    "    for int(float(totals))in Profits_Loses:\n",
+    "        [Profits_Loses].index(int(biggest_gain))"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(csvpath, 'r') as revenue_data:\n",
+    "    reader = csv.DictReader(revenue_data)\n",
     "    for row in reader:\n",
+    "        #print(row[0])\n",
     "\n",
     "#track the totals\n",
     "        total_months=total_months+1\n",
+    "      \n",
     "        total_revenue = total_revenue + int(row[\"Profit/Losses\"])  \n",
     "# track the revenue change\n",
     "        revenue_change = int(row[\"Profit/Losses\"]) - prev_revenue\n",
@@ -144,31 +229,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'csvpath' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-7fcfb78a0117>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# open file in read mode and storing contents as variable \"X\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mcsvreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mcsv_header\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvreader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsv_header\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'csvpath' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# open file in read mode and storing contents as variable \"X\"\n",
-    "with open(csvpath, 'r') as csvfile:\n",
-    "    csvreader = csv.reader(csvfile, delimiter=',')\n",
-    "    csv_header = next(csvreader)\n",
-    "    print(csv_header)\n",
-    "    for row in csvreader:\n",
-    "       months = row[0]\n",
-    "       profit_losses = int(row[1])\n",
-    "  \n",
     "\n"
    ]
   },
