--- a/02Python_Analysis/PyBank/PyBankHomework.ipynb
+++ b/02Python_Analysis/PyBank/PyBankHomework.ipynb
@@ -43,7 +43,7 @@
     "#import budget data and run an analysis of profit/loss and months they coincide with\n",
     "#output file is HW2 \n",
     "import csv\n",
-    "hw2 = 'financials.txt'\n",
+    "hw2 = 'PyBankOutput.txt'\n",
     "csvpath = 'budget_data.csv'\n",
     "with open(csvpath, 'r') as revenue_data:\n",
     "    csvreader = csv.reader(revenue_data, delimiter = \",\")\n",
