--- a/02Python_Analysis/PyRamen/PyRamenHomework.ipynb
+++ b/02Python_Analysis/PyRamen/PyRamenHomework.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,18 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set file paths for menu_data.csv and sales_data.csv\n",
-    "menu_path= Path('../02Python_Analysis/PyRamen/menu_data.csv')\n",
-    "sales_path= Path('../02Python_Analysis/PyRamen/sales_data.csv')"
+    "menu_path= Path('menu_data.csv')\n",
+    "sales_path= Path('sales_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -130,7 +130,7 @@
     "        report[item][\"revenue\"]= report[item][\"count\"]*price\n",
     "        report[item][\"cogs\"]=report[item][\"count\"]*cost\n",
     "        report[item][\"net_profit\"]=report[item][\"count\"]*(price-cost)\n",
-    "hw2=\"homework2.txt\"\n",
+    "hw2=\"PyRamenOutput.txt\"\n",
     "output = (str(report).replace('}, ',',\\n '))\n",
     "with open(hw2,\"w\") as data:\n",
     "    data.write(output)"
