--- a/00MySandbox/startoftheday.ipynb
+++ b/00MySandbox/startoftheday.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the path\n",
-    "filepath = Path('/Users/jeff/FinTechCourseWork/Workbook_copy /1_Class_Materials/03-Python-Pandas/Day 2/11-Stu_Returns/Resources/amd_stock_data.csv')\n",
+    "filepath = Path('amd_stock_data.csv')\n",
     "# Read in the CSV as a DataFrame\n",
     "amd_df = pd.read_csv(filepath)"
    ]
@@ -563,9 +563,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.2 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -577,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
