--- a/00MySandbox/projectsmine/04-Pandas/Instructions/Starter_Code/Resources/keepitsimplenever.ipynb
+++ b/00MySandbox/projectsmine/04-Pandas/Instructions/Starter_Code/Resources/keepitsimplenever.ipynb
@@ -303,8 +303,8 @@
    ],
    "source": [
     "# Join Whale Returns, Algorithmic Returns, and the S&P 500 Returns into a single DataFrame with columns for each portfolio's returns.\n",
-    "combinedrtns = pd.concat([sp500cleaned,algo_cleandf,whale_cleandf], axis='columns', join='inner')\n",
-    "combinedrtns.info()"
+    "combined_rtns = pd.concat([sp500cleaned,algo_cleandf,whale_cleandf], axis='columns', join='inner')\n",
+    "combined_rtns.info()"
    ]
   },
   {
@@ -314,7 +314,7 @@
    "outputs": [],
    "source": [
     "# Plot daily returns of all portfolios\n",
-    "combinedrtns.plot(\n",
+    "combined_rtns.plot(\n",
     "            kind='line'\n",
     "            , figsize=(20,20)\n",
     "            , grid=True\n",
@@ -354,7 +354,7 @@
    ],
    "source": [
     "# Calculate cumulative returns of all portfolios\n",
-    "cum_rets = (1 + combinedrtns).cumprod()\n",
+    "cum_rets = (1 + combined_rtns).cumprod()\n",
     "# Plot cumulative returns\n",
     "cum_rets.plot(\n",
     "        kind='line'\n",
@@ -434,7 +434,7 @@
    ],
    "source": [
     "# Calculate the daily standard deviations of all portfolios\n",
-    "daily_std=combinedrtns.std().sort_values()\n",
+    "daily_std=combined_rtns.std().sort_values()\n",
     "daily_std"
    ]
   },
@@ -551,7 +551,7 @@
    ],
    "source": [
     "# Calculate the rolling standard deviation for all portfolios using a 21-day window\n",
-    "rolltwentyone=combinedrtns.rolling(window=21).std()\n",
+    "rolltwentyone=combined_rtns.rolling(window=21).std()\n",
     "# Plot the rolling standard deviation\n",
     "rolltwentyone.plot(\n",
     "              kind='line'\n",
@@ -600,7 +600,7 @@
    ],
    "source": [
     "# Calculate the correlation\n",
-    "correlation=combinedrtns.corr()\n",
+    "correlation=combined_rtns.corr()\n",
     "# Display the correlation matrix\n",
     "print(correlation.sum(axis=0).sort_values())\n",
     "sns.set_theme(style='white')\n",
@@ -610,7 +610,7 @@
   {
    "source": [
     "### Calculate and Plot Beta for a chosen portfolio and the S&P 500\n",
-    "combinedrtns.keys()\n"
+    "combined_rtns.keys()\n"
    ],
    "cell_type": "code",
    "metadata": {},
@@ -660,14 +660,14 @@
     "#2. Calculate and plot the correlation between each stock to determine which portfolios may mimick the S&P 500.\n",
     "#3. Choose one portfolio, then calculate and plot the 60-day rolling beta between it and the S&P 500.\n",
     "# Calculate covariance of a single portfolio--i didnt know which one i wanted to do \n",
-    "algo_1_cov=combinedrtns['Algo 1'].cov(combinedrtns['S&P500 Returns'])\n",
-    "algo_2_cov=combinedrtns['Algo 2'].cov(combinedrtns['S&P500 Returns'])\n",
-    "soros_cov=combinedrtns['SOROS FUND MANAGEMENT LLC'].cov(combinedrtns['S&P500 Returns'])\n",
-    "paul_cov=combinedrtns['PAULSON & CO.INC. '].cov(combinedrtns['S&P500 Returns'])\n",
-    "tiger_cov=combinedrtns['TIGER GLOBAL MANAGEMENT LLC'].cov(combinedrtns['S&P500 Returns'])\n",
-    "buffet_cov=combinedrtns['BERKSHIRE HATHAWAY INC'].cov(combinedrtns['S&P500 Returns'])\n",
+    "algo_1_cov=combined_rtns['Algo 1'].cov(combined_rtns['S&P500 Returns'])\n",
+    "algo_2_cov=combined_rtns['Algo 2'].cov(combined_rtns['S&P500 Returns'])\n",
+    "soros_cov=combined_rtns['SOROS FUND MANAGEMENT LLC'].cov(combined_rtns['S&P500 Returns'])\n",
+    "paul_cov=combined_rtns['PAULSON & CO.INC. '].cov(combined_rtns['S&P500 Returns'])\n",
+    "tiger_cov=combined_rtns['TIGER GLOBAL MANAGEMENT LLC'].cov(combined_rtns['S&P500 Returns'])\n",
+    "buffet_cov=combined_rtns['BERKSHIRE HATHAWAY INC'].cov(combined_rtns['S&P500 Returns'])\n",
     "# Calculate variance of S&P 500\n",
-    "variance=combinedrtns['S&P500 Returns'].var()\n",
+    "variance=combined_rtns['S&P500 Returns'].var()\n",
     "# Computing beta\n",
     "algo_1_beta=algo_1_cov/variance\n",
     "algo_2_beta=algo_2_cov/variance\n",
@@ -676,14 +676,14 @@
     "tiger_beta=tiger_cov/variance\n",
     "buffet_beta=buffet_cov/variance\n",
     "# Calculate rolling covariance\n",
-    "roll_algo_1_cov = combinedrtns['Algo 1'].rolling(window=21).cov(combinedrtns['S&P500 Returns'])\n",
-    "roll_algo_2_cov = combinedrtns['Algo 2'].rolling(window=21).cov(combinedrtns['S&P500 Returns'])\n",
-    "roll_soros_cov = combinedrtns['SOROS FUND MANAGEMENT LLC'].rolling(window=21).cov(combinedrtns['S&P500 Returns'])\n",
-    "roll_paul_cov = combinedrtns['PAULSON & CO.INC. '].rolling(window=21).cov(combinedrtns['S&P500 Returns'])\n",
-    "roll_tiger_cov = combinedrtns['TIGER GLOBAL MANAGEMENT LLC'].rolling(window=21).cov(combinedrtns['S&P500 Returns'])\n",
-    "roll_buffet_cov = combinedrtns['BERKSHIRE HATHAWAY INC'].rolling(window=21).cov(combinedrtns['S&P500 Returns'])\n",
+    "roll_algo_1_cov = combined_rtns['Algo 1'].rolling(window=21).cov(combined_rtns['S&P500 Returns'])\n",
+    "roll_algo_2_cov = combined_rtns['Algo 2'].rolling(window=21).cov(combined_rtns['S&P500 Returns'])\n",
+    "roll_soros_cov = combined_rtns['SOROS FUND MANAGEMENT LLC'].rolling(window=21).cov(combined_rtns['S&P500 Returns'])\n",
+    "roll_paul_cov = combined_rtns['PAULSON & CO.INC. '].rolling(window=21).cov(combined_rtns['S&P500 Returns'])\n",
+    "roll_tiger_cov = combined_rtns['TIGER GLOBAL MANAGEMENT LLC'].rolling(window=21).cov(combined_rtns['S&P500 Returns'])\n",
+    "roll_buffet_cov = combined_rtns['BERKSHIRE HATHAWAY INC'].rolling(window=21).cov(combined_rtns['S&P500 Returns'])\n",
     "# Calculate rolling variance of sp500\n",
-    "roll_variance = combinedrtns['S&P500 Returns'].rolling(window=60).var()\n",
+    "roll_variance = combined_rtns['S&P500 Returns'].rolling(window=60).var()\n",
     "# calulating rolling betas\n",
     "roll_algo_1_beta = roll_algo_1_cov / roll_variance\n",
     "roll_algo_2_beta = roll_algo_2_cov / roll_variance\n",
@@ -810,7 +810,7 @@
    ],
    "source": [
     "# Annualized Sharpe Ratios\n",
-    "sharpie_ratio=((combinedrtns.mean())*252)/(combinedrtns.std()*np.sqrt(252))\n",
+    "sharpie_ratio=((combined_rtns.mean())*252)/(combined_rtns.std()*np.sqrt(252))\n",
     "sharpie_ratio.sort_values(inplace=True)\n",
     "sharpie_ratio"
    ]
