--- a/04-Pandas/Instructions/Homework/Resources/FinalHW.ipynb
+++ b/04-Pandas/Instructions/Homework/Resources/FinalHW.ipynb
@@ -1124,7 +1124,7 @@
   },
   {
    "source": [
-    "#  The personal portfolio outperforms the benchmarks sharpe ratio of the S&P 500 by almost 100%  but doesnt compare to the sheer results the algo 1 has. It has strong corrleation to the benchmark compiled with a stronger reaction to the market on the upside which also helps to explain why the chosen three would provide a more return for less risk than the S&P 500."
+    "#  The personal portfolio outperforms the benchmarks sharpe ratio of the S&P 500 by almost 100%  but doesnt compare to the sheer results the algo 1 has. It has strong corrleation to the benchmark compiled with a stronger reaction to the market on the upside which also helps to explain why the chosen three would provide a similar yet less risky returns than the S&p 500    "
    ],
    "cell_type": "markdown",
    "metadata": {}
