--- a/00MySandbox/05-PyViz/Starter_Code/dashboard.ipynb
+++ b/00MySandbox/05-PyViz/Starter_Code/dashboard.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\nInt64Index: 397 entries, 2010 to 2016\nData columns (total 4 columns):\nneighborhood           397 non-null object\nsale_price_sqr_foot    392 non-null float64\nhousing_units          397 non-null int64\ngross_rent             397 non-null int64\ndtypes: float64(1), int64(2), object(1)\nmemory usage: 15.5+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the necessary CSVs to Pandas DataFrames\n",
-    "# YOUR CODE HERE!"
+    "file_path = Path(\"Data/sfo_neighborhoods_census_data.csv\")\n",
+    "sfo_data = pd.read_csv(file_path, index_col=\"year\")\n"
    ]
   },
   {
@@ -309,9 +318,13 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python [conda env:pyvizenv25] *",
-   "language": "python",
-   "name": "conda-env-pyvizenv25-py"
+   "name": "python3",
+   "display_name": "Python 3.7.9 64-bit ('dev': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "14e700c8c65771060546078a9c81242580c9c3fa3f1f0cc384591156767d8e1b"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -323,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9-final"
   },
   "mimetype": "text/x-python",
   "name": "python",
