--- a/04-Pandas/finalversion/Resources/FinalHW.ipynb
+++ b/04-Pandas/finalversion/Resources/FinalHW.ipynb
@@ -6,7 +6,6 @@
     "# Initial imports\n",
     "import pandas as pd \n",
     "import numpy as np\n",
-    "import datetime as dt\n",
     "from pathlib import Path\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
@@ -529,7 +528,7 @@
     "ax = roll_algo_1_beta.plot(figsize=(20, 10)\n",
     "                            , title='Rolling 60-Day Beta of Portfolios'\n",
     "                            , grid = True\n",
-    "                            , rot=360);\n",
+    "                            , rot=360)\n",
     "roll_soros_beta.plot(ax=ax\n",
     "                     , rot=360\n",
     "                    , grid = True)\n",
